delete multi account feature

--- a/app/locales/de/common.json
+++ b/app/locales/de/common.json
@@ -1,10 +1,8 @@
 {
   "app": {
-    "title": "Instagram-Feed",
+    "title": "SocialFlux",
     "connect": "Instagram verbinden",
-    "addAccount": "Konto hinzufügen",
     "disconnect": "Trennen",
-    "disconnectAll": "Alle trennen",
     "save": "Speichern",
     "saving": "Speichern..."
   },
@@ -18,20 +16,22 @@
   "filters": {
     "all": "Alle",
     "published": "Veröffentlicht",
-    "tagged": "Markiert",
-    "allAccounts": "Alle Konten",
-    "filterByAccount": "Nach Instagram-Konto filtern"
+    "tagged": "UGC (nutzergenerierte Inhalte)"
   },
   "messages": {
     "noPostsFound": "Keine Instagram-Beiträge gefunden. Veröffentlichen Sie Inhalte auf Instagram, um sie hier zu sehen.",
     "noAccountConnected": "Kein Instagram-Konto verbunden.",
-    "connectedAccounts": "Verbundene Konten:",
     "saveSuccess": "{{count}} Beiträge erfolgreich gespeichert!",
     "tooManyAttempts": "Zu viele Versuche, bitte versuchen Sie es in 1 Stunde erneut",
     "tooManySaves": "Zu viele Speicherungen, bitte warten Sie einige Minuten",
     "tooManyDisconnects": "Zu viele Trennungen, bitte warten Sie",
     "networkError": "Netzwerkfehler: {{message}}",
-    "noPostsForAccount": "Keine Beiträge für @{{username}} gefunden"
+    "tagSuccess": "Produkte erfolgreich gekennzeichnet",
+    "tagError": "Fehler beim Kennzeichnen",
+    "tagNetworkError": "Netzwerkfehler beim Kennzeichnen",
+    "untagSuccess": "Produkte erfolgreich entfernt",
+    "untagError": "Fehler beim Entfernen der Kennzeichnung",
+    "untagNetworkError": "Netzwerkfehler beim Entfernen der Kennzeichnung"
   },
   "empty": {
     "title": "Wie funktioniert es?",
@@ -40,22 +40,26 @@
     "step2Title": "2. Wählen Sie Ihre Beiträge",
     "step2Desc": "Wählen Sie die Beiträge aus, die in Ihrem Shop angezeigt werden sollen",
     "step3Title": "3. Auf Ihrer Website veröffentlichen",
-    "step3Desc": "Fügen Sie den Instagram-Feed-Block zu Ihrem Theme hinzu",
+    "step3Desc": "Fügen Sie den SocialFlux-Block zu Ihrem Theme hinzu",
     "info": "Verwandeln Sie Ihre Instagram-Beiträge in ansprechende Inhalte für Ihren Shop. Automatische Synchronisierung und anpassbare Anzeige.",
     "warning": "Sie benötigen ein Instagram Business-Konto, das mit einer Facebook-Seite verbunden ist, um diese Anwendung zu nutzen."
   },
   "post": {
-    "tagged": "MARKIERT",
+    "tagged": "UGC (nutzergenerierte Inhalte)",
     "noCaption": "Keine Beschriftung",
-    "viewOnInstagram": "Auf Instagram ansehen →"
+    "viewOnInstagram": "Auf Instagram ansehen →",
+    "mediaUnavailable": "Medien nicht verfügbar"
+  },
+  "toast": {
+    "success": "Erfolg",
+    "error": "Fehler"
   },
   "aria": {
     "filterPosts": "Beiträge filtern: {{type}}",
-    "disconnectAccount": "Konto @{{username}} trennen",
-    "postCheckbox": "Instagram-Beitrag von @{{username}} - {{caption}}",
+    "postCheckbox": "Instagram-Beitrag - {{caption}}",
     "postImage": "Instagram-Beitrag: {{caption}}",
-    "postVideo": "Instagram-Video von @{{username}}",
-    "viewPost": "Beitrag von @{{username}} auf Instagram ansehen (öffnet in neuem Tab)",
+    "postVideo": "Instagram-Video",
+    "viewPost": "Beitrag auf Instagram ansehen (öffnet in neuem Tab)",
     "connectButton": "Verbinden Sie Ihr Instagram Business-Konto",
     "stat": "{{label}}: {{value}}"
   }
