--- a/app/locales/es/common.json
+++ b/app/locales/es/common.json
@@ -1,10 +1,8 @@
 {
   "app": {
-    "title": "Feed de Instagram",
+    "title": "SocialFlux",
     "connect": "Conectar Instagram",
-    "addAccount": "Añadir cuenta",
     "disconnect": "Desconectar",
-    "disconnectAll": "Desconectar todo",
     "save": "Guardar",
     "saving": "Guardando..."
   },
@@ -18,20 +16,22 @@
   "filters": {
     "all": "Todos",
     "published": "Publicados",
-    "tagged": "Etiquetados",
-    "allAccounts": "Todas las cuentas",
-    "filterByAccount": "Filtrar por cuenta de Instagram"
+    "tagged": "UGC (contenido generado por usuarios)"
   },
   "messages": {
     "noPostsFound": "No se encontraron publicaciones de Instagram. Publica contenido en Instagram para verlo aquí.",
     "noAccountConnected": "No hay cuenta de Instagram conectada.",
-    "connectedAccounts": "Cuentas conectadas:",
     "saveSuccess": "¡{{count}} publicaciones guardadas con éxito!",
     "tooManyAttempts": "Demasiados intentos, inténtelo de nuevo en 1 hora",
     "tooManySaves": "Demasiadas guardadas, espere unos minutos",
     "tooManyDisconnects": "Demasiadas desconexiones, por favor espere",
     "networkError": "Error de red: {{message}}",
-    "noPostsForAccount": "No se encontraron publicaciones para @{{username}}"
+    "tagSuccess": "Productos etiquetados con éxito",
+    "tagError": "Error durante el etiquetado",
+    "tagNetworkError": "Error de red durante el etiquetado",
+    "untagSuccess": "Productos desatendidos con éxito",
+    "untagError": "Error al desatender",
+    "untagNetworkError": "Error de red al desatender"
   },
   "empty": {
     "title": "¿Cómo funciona?",
@@ -40,22 +40,26 @@
     "step2Title": "2. Selecciona tus publicaciones",
     "step2Desc": "Elige las publicaciones para mostrar en tu tienda",
     "step3Title": "3. Publica en tu sitio",
-    "step3Desc": "Añade el bloque de Feed de Instagram a tu tema",
+    "step3Desc": "Añade el bloque de SocialFlux a tu tema",
     "info": "Transforma tus publicaciones de Instagram en contenido atractivo para tu tienda. Sincronización automática y visualización personalizable.",
     "warning": "Necesitarás una cuenta de Instagram Business conectada a una página de Facebook para usar esta aplicación."
   },
   "post": {
-    "tagged": "ETIQUETADO",
+    "tagged": "UGC (contenido generado por usuarios)",
     "noCaption": "Sin descripción",
-    "viewOnInstagram": "Ver en Instagram →"
+    "viewOnInstagram": "Ver en Instagram →",
+    "mediaUnavailable": "Medios no disponibles"
+  },
+  "toast": {
+    "success": "Éxito",
+    "error": "Error"
   },
   "aria": {
     "filterPosts": "Filtrar publicaciones: {{type}}",
-    "disconnectAccount": "Desconectar cuenta @{{username}}",
-    "postCheckbox": "Publicación de Instagram de @{{username}} - {{caption}}",
+    "postCheckbox": "Publicación de Instagram - {{caption}}",
     "postImage": "Publicación de Instagram: {{caption}}",
-    "postVideo": "Video de Instagram de @{{username}}",
-    "viewPost": "Ver publicación de @{{username}} en Instagram (abre en nueva pestaña)",
+    "postVideo": "Video de Instagram",
+    "viewPost": "Ver publicación en Instagram (abre en nueva pestaña)",
     "connectButton": "Conecta tu cuenta de Instagram Business",
     "stat": "{{label}}: {{value}}"
   }
